# semantic-bts

./: .gitignore.template  .gitmodules  AGENTS.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci-lint.yml  ci-pre-release.yml  ci-release.yml  ci-test.yml
.pi/: settings.json
pi/: package-lock.json  package.json
pi/extensions/: xorq.ts
pi/skills/builder/: SKILL.md
pi/skills/catalog-explore/: SKILL.md
pi/skills/composer/: SKILL.md
pi/skills/init/: SKILL.md
pi/skills/ml-pipeline/: SKILL.md
src/semantic_bts/: __init__.py  __main__.py  _paths.py  api.py  build.py  cli.py
src/semantic_bts/exprs/: __init__.py  build_aggregates.py  build_airports.py  build_carriers.py  build_chasm_fanout.py  build_dow_deststate.py  build_flights.py  build_semantic_flights.py
src/semantic_bts/tests/: conftest.py  test_api.py  test_cli.py  test_integration.py
src/semantic_bts_demo/: __main__.py  api.py  cli.py  hello.py
src/semantic_bts_demo/tests/: test_cli.py  test_hello_world.py
