[project]
name = "semantic-bts-demo"
version = "0.1.0"
description = "Example using boring-samantic-layer & xorq calculate measures with bureau of labor statitstics data."
requires-python = ">=3.10,<3.14"
dependencies = [
 "boring-semantic-layer>=0.3.13",
 "click>=8.3.1",
 "xorq>=0.3.24",
]

[project.scripts]
semantic-bts-demo = "semantic_bts_demo.cli:cli"
semantic-bts-demo-function = "semantic_bts_demo.hello:hello"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
test = [
    "coverage>=7.13.2",
    "ipython>=8.38.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff.lint]
extend-select = ["I", "ICN"]

[tool.ruff.lint.isort]
known-first-party = ["semantic_bts_demo"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.pytest.ini_options]
markers = [
    "core",
    "scripts"
]
consider_namespace_packages = true
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
